# dashes

./: .gitignore  README.md  pyproject.toml
app/: app.py  components.py  dashes-434308-80fb16fd074e.json  dataAdquisition.py  dataWrangler.py  main.py
app/env/: pyvenv.cfg
app/env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
