[tool.poetry]
name = "dashes"
version = "0.1.0"
description = ""
authors = ["Juan Pablo <41731415+Juanpgm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
dash = "^2.17.1"
pandas = "^2.2.2"
google-drive = "^0.5.1"
gspread = "^6.1.2"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
